--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,10 +64,7 @@ jobs:
       with:
         azcliversion: 2.0.72
         inlineScript: |
-            ls
-            cd food-tracker-ml
-            ls
-            az storage blob upload-batch --account-name foodtrackerstorage -d '$web' -s ./food-tracker-ml/dist
+            az storage blob upload-batch --account-name foodtrackerstorage -d '$web' -s ./food-tracker-ml/build
     
   # Azure logout 
     - name: logout
